--- a/package.json
+++ b/package.json
@@ -9,58 +9,58 @@
   },
   "activationEvents": [
     "onWebviewPanel:niksi"
-    ],
-    "main": "./out/extension.js",
-    "contributes": {
-      "viewsContainers": {
-        "activitybar": [
-          {
-            "id": "niksi",
-            "title": "Niksi",
-            "icon": "icon.png"
-          }
-        ]
-      },
-      "viewsWelcome": [
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "viewsContainers": {
+      "activitybar": [
         {
-          "view": "niksi.emptyView",
-          "contents": "[Avaa niksi](command:niksi.start)"
-        }
-      ],
-      "views": {
-        "niksi": [
-          {
-            "type": "tree",
-            "id": "niksi.emptyView",
-            "name": "Niksi"
-          }
-        ]
-      },
-      "commands": [
-        {
-          "command": "niksi.start",
-          "title": "Start a new session with Niksi",
-          "category": "Niksi",
-          "icon": {
-            "light": "icon.png",
-            "dark": "icon.png"
-          }
+          "id": "niksi",
+          "title": "Niksi",
+          "icon": "icon.png"
         }
       ]
     },
-    "scripts": {
-      "vscode:prepublish": "npm run compile",
-      "compile": "tsc -p ./",
-      "lint": "eslint \"src/**/*.ts\"",
-      "watch": "tsc -w -p ./"
+    "viewsWelcome": [
+      {
+        "view": "niksi.emptyView",
+        "contents": "[Create new](command:niksi.new)\n[Open existing project](command:niksi.start)\n[Open Aalto course](niksi.aalto)"
+      }
+    ],
+    "views": {
+      "niksi": [
+        {
+          "type": "tree",
+          "id": "niksi.emptyView",
+          "name": "Niksi"
+        }
+      ]
     },
-    "devDependencies": {
-      "@types/node": "^16.18.34",
-      "@types/vscode": "^1.73.0",
-      "@types/vscode-webview": "^1.57.0",
-      "@typescript-eslint/eslint-plugin": "^6.7.0",
-      "@typescript-eslint/parser": "^6.7.0",
-      "eslint": "^8.26.0",
-      "typescript": "^5.3.2"
-    }
+    "commands": [
+      {
+        "command": "niksi.start",
+        "title": "Start a new session with Niksi",
+        "category": "Niksi",
+        "icon": {
+          "light": "icon.png",
+          "dark": "icon.png"
+        }
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "lint": "eslint \"src/**/*.ts\"",
+    "watch": "tsc -w -p ./"
+  },
+  "devDependencies": {
+    "@types/node": "^16.18.34",
+    "@types/vscode": "^1.73.0",
+    "@types/vscode-webview": "^1.57.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.26.0",
+    "typescript": "^5.3.2"
+  }
 }
