--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.26.0",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "eta": "^3.2.0"
   }
 }
