--- a/package.json
+++ b/package.json
@@ -87,7 +87,9 @@
     "@types/vscode-webview": "^1.57.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "daisyui": "^4.9.0",
     "eslint": "^8.26.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.2"
   },
   "dependencies": {
