fix: add required packages for @tailwindcss/typography

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "watch": "tsc -w -p ./"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^16.18.34",
     "@types/vscode": "^1.73.0",
     "@types/vscode-webview": "^1.57.0",
